# metamagic

./: .gitignore  Cargo.toml
.cargo/: audit.toml
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  security.yml
build-scripts/: build_and_test.sh
crates/: Cargo.toml
crates/dscvr-candid-generator/: Cargo.toml
crates/dscvr-candid-generator/src/: lib.rs  rust_canister_agent.rs  util.rs
crates/dscvr-canister-agent/: Cargo.toml
crates/dscvr-canister-agent/src/: agent_impl.rs  lib.rs  module_hash.rs  rust_canister_agent.rs  stable_storage_restore_backup.rs  stats.rs
crates/dscvr-canister-agent/src/agent_impl/: embedded_canister_impl.rs  replica_impl.rs  state_machine_impl.rs
crates/dscvr-canister-config/: Cargo.toml  README.md
crates/dscvr-canister-config/src/: canister_init_arguments.rs  lib.rs  schema.rs
crates/dscvr-canister-config/src/schema/: dfx.rs  dscvr.rs
crates/dscvr-canister-config/src/schema/dscvr/: allocate.rs  persist.rs  provision.rs
crates/dscvr-canister-context/: Cargo.toml
crates/dscvr-canister-context/src/: lib.rs
crates/dscvr-canister-exports/: Cargo.toml
crates/dscvr-canister-exports/src/: lib.rs
crates/dscvr-interface/: Cargo.toml
crates/dscvr-interface/src/: edge.rs  internet_computer.rs  lib.rs  unit_test.rs
crates/dscvr-telemetry-util/: Cargo.toml
crates/dscvr-telemetry-util/src/: lib.rs
crates/dscvr-tracing-util/: Cargo.toml
crates/dscvr-tracing-util/src/: lib.rs
crates/ic-canister-io/: Cargo.toml
crates/ic-canister-io/src/: lib.rs  movable_io.rs
crates/ic-canister-logger/: Cargo.toml
crates/ic-canister-logger/src/: lib.rs  scoped_instruction_counter.rs
crates/ic-canister-stable-storage/: Cargo.toml  interface.did
crates/ic-canister-stable-storage/src/: data_format.rs  file_util.rs  header.rs  interface.rs  lib.rs  migration.rs  transient.rs  v1.rs  v2.rs
crates/ic-identity-util/: Cargo.toml
crates/ic-identity-util/src/: lib.rs
crates/ic-ingress-validator-util/: Cargo.toml
crates/ic-ingress-validator-util/src/: delegation_validator.rs  lib.rs  webauthn.rs
crates/ic-rc-principal/: Cargo.toml
crates/ic-rc-principal/src/: lib.rs
crates/instrumented-error/: Cargo.toml
crates/instrumented-error/src/: lib.rs
