[workspace]
resolver = "2"

members = [
    "crates/dscvr-candid-generator",
    "crates/dscvr-canister-agent",
    "crates/dscvr-canister-config",
    "crates/dscvr-canister-exports",
    "crates/dscvr-interface",
    "crates/dscvr-telemetry-util",
    "crates/dscvr-tracing-util",
    "crates/ic-canister-io",
    "crates/ic-canister-logger",
    "crates/ic-canister-stable-storage",
    "crates/ic-identity-util",
    "crates/ic-ingress-validator-util",
    "crates/ic-rc-principal",
    "crates/instrumented-error",
]

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1"
# Note: Need to leave ring at 0.16 for compatibility with ic-agent
bincode = "1.3"
candid = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
candid_parser = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
convert_case = "0.6"
deepsize = { git = "https://github.com/dscvr-one/deepsize.git", tag = "dscvr-2024-04-11-2", features = [
    "candid",
    "serde_bytes",
    "derive",
    "std",
] }
derive_more = "0.99"
enum-iterator = "1.2.0"
flate2 = "1.0"
futures = "0.3.25"
ic-agent = { version = "0.34.0", features = ["pem"] }
ic-cdk = "0.13"
lazy_static = "1.4"
num-traits = "0.2.15"
ring = "0.17"
rmp-serde = "1.1"
rustc-hash = { version = "1.1" }
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
time = "0.3.17"
tokio = "1.0"
tokio-retry = "0.3"
tracing = "0.1"
tracing-error = { version = "0.2", features = ["traced-error"] }
tracing-stackdriver = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
candid = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
candid_parser = { git = "https://github.com/dscvr-one/candid.git", rev = "dscvr-2024-04-11-2" }
