[package]
name = "dscvr-canister-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std.workspace = true
async-stream = "0.3.4"
async-trait.workspace = true
candid.workspace = true
convert_case.workspace = true
enum-iterator.workspace = true
futures.workspace = true
garcon = "0.2.3"
hex = "0.4"
ic-agent.workspace = true
serde_bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-retry.workspace = true
tokio.workspace = true
tracing-error.workspace = true
tracing.workspace = true

dscvr-canister-config = { path = "../dscvr-canister-config" }
dscvr-canister-context = { path = "../dscvr-canister-context" }
dscvr-canister-exports = { path = "../dscvr-canister-exports" }
dscvr-interface = { path = "../dscvr-interface" }
ic-canister-stable-storage = { path = "../ic-canister-stable-storage" }
ic-identity-util = { path = "../ic-identity-util" }
ic-test-state-machine-client = "=3.0.1"
instrumented-error = { path = "../instrumented-error" }

[build-dependencies]

dscvr-candid-generator = { path = "../dscvr-candid-generator" }
dscvr-tracing-util = { path = "../dscvr-tracing-util" }
