[package]
name = "dscvr-tracing-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-error.workspace = true
tracing-stackdriver.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true